Ajax bug fix due to improper spacing

--- a/blocks/cart-block/editor.css
+++ b/blocks/cart-block/editor.css
@@ -5,7 +5,7 @@
 
 
 .wooberg-cart  {
-  /*display: none;*/
+  display: none;
   position: absolute;
   width: 370px;
   height: 430px;
@@ -97,7 +97,6 @@
   left: 20px;
   top: 79px;
   border-bottom: 1px solid #f2f2f2 ;
-
 }
 
 .wooberg-cart-product > img:first-child {
